# Linux-MCU-Prog

./: CMakeLists.txt  Makefile  README.md
cmake/: utility.cmake
components/DAP/: CMakeLists.txt
components/DAP/Config/: DAP_config.h
components/DAP/Include/: DAP.h  DAP_strings.h
components/DAP/Source/: DAP.c  SW_DP.c
components/Platform/: CMakeLists.txt
components/Platform/Include/: fsl_rgpio.h  imx_gpio.h  log.h
components/Platform/Source/: fsl_rgpio.c  imx_gpio.c
components/Program/: CMakeLists.txt
components/Program/inc/: algorithm.h  armv8_gcc.h  bin_prog.h  bin_program.h  file_programmer.h  flash_accessor.h  flash_iface.h  hex_prog.h  hex_program.h  log.h  swd_iface.h  target_flash.h
components/Program/src/: algorithm.cpp  bin_prog.cpp  bin_program.cpp  file_programmer.cpp  flash_accessor.cpp  hex_prog.cpp  hex_program.cpp  swd_host.c  swd_iface.cpp  target_flash.cpp  target_swd.cpp
components/SWD/: CMakeLists.txt
components/SWD/inc/: ah618_gpio.h  ah618_swd.h  ah6_gpio.h  ah6_swd.h  bcm2835_gpio.h  bcm2835_swd.h  compiler.h  dap.h  imx93_gpio.h  imx93_swd.h  rk3588_gpio.h  rk3588_swd.h  sg2002_gpio.h  sg2002_swd.h  sw_dp.h
components/SWD/src/: ah618_gpio.c  ah618_swd.cpp  ah6_gpio.c  ah6_swd.cpp  bcm2835_gpio.c  bcm2835_swd.cpp  imx93_gpio.c  imx93_swd.cpp  rk3588_gpio.c  rk3588_swd.cpp  sg2002_gpio.c  sg2002_swd.cpp
components/Tool/: CMakeLists.txt
components/Tool/src/: main.cpp
main/: main.cpp
scripts/: array.py
